--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
     ssl_verify_fun,
 	% Used for tests
 	{gun,  {git, "https://github.com/ninenines/gun.git", {branch, "master"}}},
+    {ranch, "2.0.0"},
     {meck, "0.8.12"}
 ]}.
 
