--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {cover_enabled, true}.
 
 {erl_opts, [
-    debug_info, warnings_as_errors, {parse_transform, lager_transform}
+    debug_info, warnings_as_errors, {parse_transform}
 ]}.
 
 % {edoc_opts, [{dir, "../../doc"}]}.
@@ -11,7 +11,7 @@
 
 
 {deps, [
-    {nklib, {git, "https://github.com/netcomposer/nklib.git", {branch, "master"}}},
+    {nklib, {git, "https://github.com/byronpc/nklib.git", {branch, "master"}}},
 	{cowboy, {git, "https://github.com/extend/cowboy", {tag, "2.6.0"}}},
     certifi,
     ssl_verify_fun,
